added createjs support

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>COMP397 - CreateJS Demo</title>
   <!-- CSS Section -->
+  <link rel="stylesheet" href="./Content/game.css">
 </head>
 <body>
   <canvas id="canvas" width="640" height="480"></canvas>
 
   <!-- Scripts Section -->
+  <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
+
   <script src="./Scripts/core/index.js"></script>
 </body>
 </html>
